--- a/prácticas/p03/fuse/examples/Makefile
+++ b/prácticas/p03/fuse/examples/Makefile
@@ -22,8 +22,8 @@ TESTS = \
 
 TESTS_OPT = $(TESTS:%=%.opt)
 
-OCAMLC = ocamlc -I ../src -I +unix -w +A -rectypes -thread unix.cma threads.cma
-OCAMLOPT = ocamlopt -I ../src -I +unix -w +A -rectypes -thread unix.cmxa threads.cmxa
+OCAMLC = ocamlc -I ../src -I +unix -w -A -rectypes -thread unix.cma threads.cma
+OCAMLOPT = ocamlopt -I ../src -I +unix -w -A -rectypes -thread unix.cmxa threads.cmxa
 DECODER = ../decoder/rosetta
 
 all: $(TESTS) $(TESTS_OPT)
@@ -56,4 +56,3 @@ fail.%: fail-%
 	svn mv $< $@
 
 .PHONY: clean html
-
